<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomePage"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/action_privacy"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_explannation_and_feedback"
        android:title="@string/action_explanation_and_feedback"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
